--- a/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-04.데이터타입 변환.md
+++ b/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-04.데이터타입 변환.md
@@ -4,9 +4,10 @@ title: '데이터타입 변환'
 typora-root-url: ../
 categories: Python.01
 tag: Python
+toc: true
 ---
 
-## 데이터 타입 변환 (형변환) 함수
+# 데이터 타입 변환 (형변환) 함수
 - ##### 값의 데이터타입을 확인하는 함수
   
     - type(값)
