--- a/_posts/01.Python/04.함수/2023-10-04-02.매개변수(Parameter).md
+++ b/_posts/01.Python/04.함수/2023-10-04-02.매개변수(Parameter).md
@@ -2,6 +2,9 @@
 layout: single
 title: '매개변수(Parameter)'
 typora-root-url: ../
+categories: Python.04
+tag: Python
+toc: true
 ---
 
 # Parameter (매개변수)
