--- a/_posts/01.Python/04.함수/2023-10-04-05.Iterable 관련함수.md
+++ b/_posts/01.Python/04.함수/2023-10-04-05.Iterable 관련함수.md
@@ -2,10 +2,13 @@
 layout: single
 title: 'Iterable 관련함수'
 typora-root-url: ../
+categories: Python.04
+tag: Python
+toc: true
 ---
 
 
-# iterable 관련 함수에서 함수를 매개변수로 받아 처리하는 함수들
+# Iterable 관련 함수
 - sorted(iterable, reverse=False, key=None)
     - 정렬처리
         - reverse: True - 내림차순, False - 오름차순(기본)
