--- a/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-00.Pandas_GroupBy.md
+++ b/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-00.Pandas_GroupBy.md
@@ -4,7 +4,7 @@ title: '변수와 연산자'
 typora-root-url: ../
 ---
 
-# filter()
+# Filter()
 - `DataFrameGroupBy.filter(func, dropna=True, *args, **kwargs)`
 - 특정 조건을 만족하는 Group의 데이터(행)들을 조회할 때 사용한다. 주로 조건은 group별 집계결과를 이용한다.
     1. 함수에 group별 DataFrame을 argument로 전달한다.
@@ -44,7 +44,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -229,7 +229,7 @@ df.groupby('fruits').filter(check_mean)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -354,7 +354,7 @@ df.groupby('fruits').filter(check_mean2, col_name='cnt1', threshold=5)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -513,7 +513,7 @@ df.groupby('fruits').filter(lambda x: x['cnt1'].mean() >= 20, dropna=False)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -654,7 +654,7 @@ df.groupby('fruits').filter(lambda x: x['cnt1'].mean() >= 20, dropna=False)
 
 
 
-# transform
+# Transform
 - `DataFrameGroupBy.transform(func, *args)`, `SeriesGroupBy.transform(func, *args)`
     - 함수(func)에 열의 값들을 group 별로 전달 한다. 함수는 그 값을 받아 통계량을 구해 반환한다. 반환된 통계량으로 원래 값들을 변경한 Series를 반환한다. 여러 컬럼에 대해 처리할 경우 DataFrame을 반환한다.
     - func: 함수객체
@@ -718,7 +718,7 @@ df2.head()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -826,7 +826,7 @@ df2
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1024,7 +1024,7 @@ df3
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1183,7 +1183,7 @@ df3
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1390,7 +1390,7 @@ df3
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1591,7 +1591,7 @@ df3
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1911,7 +1911,7 @@ df4
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2070,7 +2070,7 @@ df4
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2230,7 +2230,7 @@ df4.dropna()#(axis=1)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2342,7 +2342,7 @@ df4.fillna(1000)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2516,7 +2516,7 @@ df4
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2719,7 +2719,7 @@ df4
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2917,7 +2917,7 @@ dia.groupby('cut').filter(lambda x : x['price'].mean() > 4000)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -3157,7 +3157,7 @@ dia.groupby('color')['carat'].agg(['min','max', lambda x : x.max() - x.min()])
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -3243,7 +3243,7 @@ result
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -3457,7 +3457,7 @@ dia.head(20)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -3766,7 +3766,7 @@ dia.head(20)
 
 
 
-# pivot_table()
+# Pivot_table()
 엑셀의 pivot table 기능을 제공하는 메소드.    
 분류별 집계(Group으로 묶어 집계)를 처리하는 함수로 group으로 묶고자 하는 컬럼들을 행과 열로 위치시키고 집계값을 값으로 보여준다.    
 역할은 `groupby()`를 이용한 집계와 같은데 **여러개 컬럼을 기준으로 groupby 를 할 경우 집계결과를 읽는 것이 더 편하다.(가독성이 좋다)**
@@ -3794,6 +3794,7 @@ dia.head(20)
 
 
 ```python
+import pandas as pd
 flight = pd.read_csv('data/flights.csv')
 flight.shape
 ```
@@ -3852,7 +3853,7 @@ print(result)
              11       104.704244
              12       104.136304
     Name: AIR_TIME, Length: 149, dtype: float64
-    
+
 
 ## 1개의 컬럼을 grouping 해서 집계
 - 항공사별 비행시간의 평균 
@@ -3862,6 +3863,13 @@ print(result)
     - 집계대상컬럼
         - AIR_TIME
 - 집계: mean
+
+```python
+import pandas as pd
+flight = pd.read_csv('data/flights.csv')
+```
+
+
 
 
 ```python
@@ -3907,7 +3915,7 @@ flight.pivot_table(index='AIRLINE', values='AIR_TIME', aggfunc='mean')
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4003,7 +4011,7 @@ flight.pivot_table(columns='AIRLINE', values='AIR_TIME', aggfunc='mean')
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4062,6 +4070,13 @@ flight.pivot_table(columns='AIRLINE', values='AIR_TIME', aggfunc='mean')
         - CANCELLED: 취소여부 - 1:취소, 0: 취소안됨
 - 집계: sum
 
+```python
+import pandas as pd
+flight = pd.read_csv('data/flights.csv')
+```
+
+
+
 
 ```python
 flight.groupby(['AIRLINE','ORG_AIR'])['CANCELLED'].sum()
@@ -4110,7 +4125,7 @@ flight.pivot_table(index='AIRLINE',    # 그룹을 나누는 기준 컬럼중 IN
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4381,7 +4396,7 @@ flight.query('AIRLINE=="B6" and ORG_AIR=="ATL"')
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4423,6 +4438,13 @@ flight.query('AIRLINE=="B6" and ORG_AIR=="ATL"')
     - CANCELLED: 취소여부
 - 집계 : sum    
 
+```python
+import pandas as pd
+flight = pd.read_csv('data/flights.csv')
+```
+
+
+
 
 ```python
 flight.pivot_table(columns='MONTH',
@@ -4446,7 +4468,7 @@ flight.pivot_table(columns='MONTH',
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4673,6 +4695,13 @@ flight.pivot_table(columns='MONTH',
     - ARR_DELAY: 연착시간
 - 집계 : min, max    
 
+```python
+import pandas as pd
+flight = pd.read_csv('data/flights.csv')
+```
+
+
+
 
 ```python
 result_df = flight.pivot_table(index=['AIRLINE','ORG_AIR'], 
@@ -4699,11 +4728,11 @@ result_df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead tr th {
         text-align: left;
     }
-
+    
     .dataframe thead tr:last-of-type th {
         text-align: right;
     }
@@ -5043,7 +5072,7 @@ result_df
 
 
 
-# apply() - Series, DataFrame의 데이터 일괄 처리
+# Apply() - Series, DataFrame의 데이터 일괄 처리
 
 데이터프레임의 행들과 열들 또는 Series의 원소들에 공통된 처리를 할 때 apply 함수를 이용하면 반복문을 사용하지 않고 일괄 처리가 가능하다.
 
@@ -5160,7 +5189,7 @@ flight.iloc[100:160]
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6276,7 +6305,7 @@ flight
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6565,7 +6594,7 @@ flight.head()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6705,7 +6734,7 @@ flight.select_dtypes(include='number').apply(lambda x : x * 5)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -7158,7 +7187,7 @@ df2
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -7366,7 +7395,7 @@ df2.groupby('나이대')['키'].mean()
 
     C:\Users\world\AppData\Local\Temp\ipykernel_9060\3004925517.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.
       df2.groupby('나이대')['키'].mean()
-    
+
 
 
 
@@ -7396,7 +7425,7 @@ df2['나이대'].value_counts().to_frame()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -7484,7 +7513,7 @@ df2.groupby('나이대2')['키'].agg(['min','max'])
 
     C:\Users\world\AppData\Local\Temp\ipykernel_9060\4131622824.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.
       df2.groupby('나이대2')['키'].agg(['min','max'])
-    
+
 
 
 
@@ -7498,7 +7527,7 @@ df2.groupby('나이대2')['키'].agg(['min','max'])
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -7601,7 +7630,7 @@ dia
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -7795,7 +7824,7 @@ dia.info()
      9   z        53940 non-null  float64
     dtypes: float64(6), int64(1), object(3)
     memory usage: 4.1+ MB
-    
+
 
 
 ```python
@@ -7915,7 +7944,7 @@ dia.head()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -8022,7 +8051,7 @@ dia.groupby('price_cate')['carat'].mean()
 
     C:\Users\world\AppData\Local\Temp\ipykernel_9060\202613706.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.
       dia.groupby('price_cate')['carat'].mean()
-    
+
 
 
 
@@ -8053,7 +8082,7 @@ dia.pivot_table(index='cut',columns='price_cate', values='price', aggfunc='mean'
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -8128,7 +8157,7 @@ dia.pivot_table(index=['cut','price_cate'],columns='color', values='carat', aggf
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -8317,5 +8346,4 @@ dia.pivot_table(index=['cut','price_cate'],columns='color', values='carat', aggf
   </tbody>
 </table>
 </div>
-
 
