--- a/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-02.인덱싱과 슬라이싱.md
+++ b/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-02.인덱싱과 슬라이싱.md
@@ -4,11 +4,12 @@ title: '인덱싱과 슬라이싱'
 typora-root-url: ../
 categories: Python.01
 tag: Python
+toc: true
 ---
 
 
 
-### Indexing과 Slicing
+# Indexing과 Slicing
 
 - **indexing**: 집합내에서 하나의 값을 조회하는 방법
 - **slicing**: 집합내에서 여러개의 값들을 범위로 지정해 조회하는 방법
