--- a/_posts/01.Python/02.자료구조/2023-10-02-02.Tuple(튜플).md
+++ b/_posts/01.Python/02.자료구조/2023-10-02-02.Tuple(튜플).md
@@ -1,13 +1,14 @@
 ---
 layout: single
-title: 'Tuple'
+title: 'Tuple(튜플)'
 typora-root-url: ../
 categories: Python.02
 tag: Python
+toc: true
 ---
 
-
 # Tuple (튜플)
+
 - List와 같이 순서대로 원소들을 관리한다. 단 저장된 원소를 변경할 수 없다.
 - Tuple 은 각 위치(Index) 마다 정해진 의미가 있고 그 값이 한번 설정되면 바뀌지 않는 경우에 사용한다. 
     - Tuple은 값의 변경되지 않으므로 안전하다.
