--- a/_posts/01.Python/02.자료구조/2023-10-02-03.Dictionary(딕셔너리).md
+++ b/_posts/01.Python/02.자료구조/2023-10-02-03.Dictionary(딕셔너리).md
@@ -1,13 +1,14 @@
 ---
 layout: single
-title: 'Dictionary'
+title: 'Dictionary(딕셔너리)'
 typora-root-url: ../
 categories: Python.02
 tag: Python
+toc: true
 ---
 
-
 # Dictionary
+
 - 값을 키(key)-값(value) 쌍으로 묶어서 저장하는 자료구조이다.
     - 리스트나 튜플의 index의 역할을 하는 key를 직접 지정한다.
     - 서로 의미가 다른 값들을 하나로 묶을 때 그 값의 의미를 key로 가질 수 있는 dictionary를 사용한다.
