--- a/_posts/01.Python/04.함수/2023-10-04-04.람다식(Lambda).md
+++ b/_posts/01.Python/04.함수/2023-10-04-04.람다식(Lambda).md
@@ -2,6 +2,9 @@
 layout: single
 title: '람다식(Lambda)'
 typora-root-url: ../
+categories: Python.04
+tag: Python
+toc: true
 ---
 
 # 람다식/람다표현식 (Lambda Expression)
