--- a/_posts/01.Python/04.함수/2023-10-04-06.Docstring.md
+++ b/_posts/01.Python/04.함수/2023-10-04-06.Docstring.md
@@ -2,9 +2,12 @@
 layout: single
 title: 'Docstring'
 typora-root-url: ../
+categories: Python.04
+tag: Python
+toc: true
 ---
 
-# docstring
+# Docstring
 
 - 함수에 대한 설명
 - 함수의 구현부의 첫번째에 여러줄 문자열로 작성한다.
