--- a/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-01.변수와 연산자.md
+++ b/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-01.변수와 연산자.md
@@ -2,7 +2,7 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
-categories: Python.01
+categories: Python.01.변수와 데이터타입
 tag: Python
 toc: true
 ---
