--- a/_posts/01.Python/02.자료구조/2023-10-02-02.Tuple(튜플).md
+++ b/_posts/01.Python/02.자료구조/2023-10-02-02.Tuple(튜플).md
@@ -2,7 +2,7 @@
 layout: single
 title: 'Tuple(튜플)'
 typora-root-url: ../
-categories: Python.02
+categories: Python.02.자료구조
 tag: Python
 toc: true
 ---
