--- a/_posts/01.Python/03.제어문컴프리헨션/2023-10-03-06.컴프리헨션(Comprehension).md
+++ b/_posts/01.Python/03.제어문컴프리헨션/2023-10-03-06.컴프리헨션(Comprehension).md
@@ -2,7 +2,7 @@
 layout: single
 title: '컴프리헨션'
 typora-root-url: ../
-categories: Python.03
+categories: Python.03.제어문컴프리헨션
 tag: Python
 toc: true
 ---
