--- a/_posts/01.Python/05.객체지향프로그램/2023-10-05-01.클래스(Class).md
+++ b/_posts/01.Python/05.객체지향프로그램/2023-10-05-01.클래스(Class).md
@@ -2,6 +2,9 @@
 layout: single
 title: '클래스(Class)'
 typora-root-url: ../
+categories: Python.05.객체지향프로그램
+tag: Python
+toc: true
 ---
 
 # Class(클래스) 정의
