--- a/_posts/01.Python/05.객체지향프로그램/2023-10-05-03.Instance 메소드.md
+++ b/_posts/01.Python/05.객체지향프로그램/2023-10-05-03.Instance 메소드.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Instance 메소드'
 typora-root-url: ../
+categories: Python.05.객체지향프로그램
+tag: Python
+toc: true
 ---
 
 # Instance 메소드(method)
