--- a/_posts/01.Python/05.객체지향프로그램/2023-10-05-10.연산자 재정의.md
+++ b/_posts/01.Python/05.객체지향프로그램/2023-10-05-10.연산자 재정의.md
@@ -2,6 +2,9 @@
 layout: single
 title: '연산자 재정의(Operator overriding)'
 typora-root-url: ../
+categories: Python.05.객체지향프로그램
+tag: Python
+toc: true
 ---
 
 
