--- a/_posts/01.Python/05.객체지향프로그램/2023-10-05-11.class변수, class 메소드.md
+++ b/_posts/01.Python/05.객체지향프로그램/2023-10-05-11.class변수, class 메소드.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Class변수, Class 메소드'
 typora-root-url: ../
+categories: Python.05.객체지향프로그램
+tag: Python
+toc: true
 ---
 
 # Class변수, Class 메소드
