--- a/_posts/01.Python/06.패키지모듈/2023-10-06-04.메인모듈과 하위모듈.md
+++ b/_posts/01.Python/06.패키지모듈/2023-10-06-04.메인모듈과 하위모듈.md
@@ -2,6 +2,9 @@
 layout: single
 title: '메인모듈과 하위모듈'
 typora-root-url: ../
+categories: Python.06.패키지모듈
+tag: Python
+toc: true
 ---
 
 # 메인 모듈(Main Module)과 하위 모듈(Sub Module)
