--- a/_posts/01.Python/08.입출력/2023-10-08-03.Binary 입출력.md
+++ b/_posts/01.Python/08.입출력/2023-10-08-03.Binary 입출력.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Binary 데이터 입출력'
 typora-root-url: ../
+categories: Python.08.입출력
+tag: Python
+toc: true
 ---
 
 # Binary 데이터 입출력
