--- a/_posts/01.Python/08.입출력/2023-10-08-04.Pickle 모듈 객체직렬화.md
+++ b/_posts/01.Python/08.입출력/2023-10-08-04.Pickle 모듈 객체직렬화.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Pickle 모듈을 이용한 객체 직렬화'
 typora-root-url: ../
+categories: Python.08.입출력
+tag: Python
+toc: true
 ---
 
 # Pickle 모듈을 이용한 객체 직렬화
