--- a/_posts/01.Python/09.Iterable과 Decorator/2023-10-09-01.Iterable과 Decorator.md
+++ b/_posts/01.Python/09.Iterable과 Decorator/2023-10-09-01.Iterable과 Decorator.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Iterable과 Iterator'
 typora-root-url: ../
+categories: Python.09.Iterable과 Decorator
+tag: Python
+toc: true
 ---
 
 # Iterable과 Iterator
