--- a/_posts/01.Python/09.Iterable과 Decorator/2023-10-09-02.Generator.md
+++ b/_posts/01.Python/09.Iterable과 Decorator/2023-10-09-02.Generator.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Generator'
 typora-root-url: ../
+categories: Python.09.Iterable과 Decorator
+tag: Python
+toc: true
 ---
 
 
