--- a/_posts/01.Python/02.자료구조/2023-10-02-03.Dictionary(딕셔너리).md
+++ b/_posts/01.Python/02.자료구조/2023-10-02-03.Dictionary(딕셔너리).md
@@ -2,7 +2,7 @@
 layout: single
 title: 'Dictionary(딕셔너리)'
 typora-root-url: ../
-categories: Python.02
+categories: Python.02.자료구조
 tag: Python
 toc: true
 ---
