--- a/_posts/01.Python/02.자료구조/2023-10-02-04.Set(셋).md
+++ b/_posts/01.Python/02.자료구조/2023-10-02-04.Set(셋).md
@@ -2,7 +2,7 @@
 layout: single
 title: 'Set(셋)'
 typora-root-url: ../
-categories: Python.02
+categories: Python.02.자료구조
 tag: Python
 toc: true
 ---
