--- a/_posts/01.Python/02.자료구조/2023-10-02-05.자료구조 변환 함수.md
+++ b/_posts/01.Python/02.자료구조/2023-10-02-05.자료구조 변환 함수.md
@@ -2,7 +2,7 @@
 layout: single
 title: '자료구조 변환'
 typora-root-url: ../
-categories: Python.02
+categories: Python.02.자료구조
 tag: Python
 toc: true
 ---
