--- a/_posts/01.Python/03.제어문컴프리헨션/2023-10-03-07.실습예제.md
+++ b/_posts/01.Python/03.제어문컴프리헨션/2023-10-03-07.실습예제.md
@@ -2,7 +2,7 @@
 layout: single
 title: '실습예제'
 typora-root-url: ../
-categories: Python.03
+categories: Python.03.제어문컴프리헨션
 tag: Python
 toc: true
 ---
