--- a/_posts/01.Python/04.함수/2023-10-04-02.매개변수(Parameter).md
+++ b/_posts/01.Python/04.함수/2023-10-04-02.매개변수(Parameter).md
@@ -2,7 +2,7 @@
 layout: single
 title: '매개변수(Parameter)'
 typora-root-url: ../
-categories: Python.04
+categories: Python.04.함수
 tag: Python
 toc: true
 ---
