--- a/_posts/01.Python/04.함수/2023-10-04-03.변수의 유효범위.md
+++ b/_posts/01.Python/04.함수/2023-10-04-03.변수의 유효범위.md
@@ -2,7 +2,7 @@
 layout: single
 title: '변수의 유효범위(Scope)'
 typora-root-url: ../
-categories: Python.04
+categories: Python.04.함수
 tag: Python
 toc: true
 ---
