--- a/_posts/01.Python/04.함수/2023-10-04-04.람다식(Lambda).md
+++ b/_posts/01.Python/04.함수/2023-10-04-04.람다식(Lambda).md
@@ -2,7 +2,7 @@
 layout: single
 title: '람다식(Lambda)'
 typora-root-url: ../
-categories: Python.04
+categories: Python.04.함수
 tag: Python
 toc: true
 ---
