--- a/_posts/01.Python/04.함수/2023-10-04-06.Docstring.md
+++ b/_posts/01.Python/04.함수/2023-10-04-06.Docstring.md
@@ -2,7 +2,7 @@
 layout: single
 title: 'Docstring'
 typora-root-url: ../
-categories: Python.04
+categories: Python.04.함수
 tag: Python
 toc: true
 ---
