--- a/_posts/01.Python/05.객체지향프로그램/2023-10-05-04.정보은닉(Information Hiding).md
+++ b/_posts/01.Python/05.객체지향프로그램/2023-10-05-04.정보은닉(Information Hiding).md
@@ -2,6 +2,9 @@
 layout: single
 title: '정보 은닉 (Information Hiding)'
 typora-root-url: ../
+categories: Python.05.객체지향프로그램
+tag: Python
+toc: true
 ---
 
 # 정보 은닉 (Information Hiding)
