--- a/_posts/01.Python/05.객체지향프로그램/2023-10-05-07.메소드 재정의.md
+++ b/_posts/01.Python/05.객체지향프로그램/2023-10-05-07.메소드 재정의.md
@@ -2,6 +2,9 @@
 layout: single
 title: '메소드 재정의(Method Overriding)'
 typora-root-url: ../
+categories: Python.05.객체지향프로그램
+tag: Python
+toc: true
 ---
 
 # Method Overriding (메소드 재정의)
