--- a/_posts/01.Python/06.패키지모듈/2023-10-06-01.패키지(Package).md
+++ b/_posts/01.Python/06.패키지모듈/2023-10-06-01.패키지(Package).md
@@ -2,6 +2,9 @@
 layout: single
 title: '패키지(Package)'
 typora-root-url: ../
+categories: Python.06.패키지모듈
+tag: Python
+toc: true
 ---
 
 # 패키지 (Package)
