--- a/_posts/01.Python/06.패키지모듈/2023-10-06-03.모듈 찾는 경로(PythonPath).md
+++ b/_posts/01.Python/06.패키지모듈/2023-10-06-03.모듈 찾는 경로(PythonPath).md
@@ -2,6 +2,9 @@
 layout: single
 title: '모듈찾는 경로(PythonPath)'
 typora-root-url: ../
+categories: Python.06.패키지모듈
+tag: Python
+toc: true
 ---
 
 # Import 된 모듈 찾는 경로 및 PYTHONPATH
