--- a/_posts/01.Python/07.예외처리/2023-10-07-01.Exception Handling.md
+++ b/_posts/01.Python/07.예외처리/2023-10-07-01.Exception Handling.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Exception Handling'
 typora-root-url: ../
+categories: Python.07.예외처리
+tag: Python
+toc: true
 ---
 
 # Exception Handling
