--- a/_posts/01.Python/09.Iterable과 Decorator/2023-10-09-04.지역함수.md
+++ b/_posts/01.Python/09.Iterable과 Decorator/2023-10-09-04.지역함수.md
@@ -2,6 +2,9 @@
 layout: single
 title: '지역함수(Local Function)'
 typora-root-url: ../
+categories: Python.09.Iterable과 Decorator
+tag: Python
+toc: true
 ---
 
 
