--- a/_posts/01.Python/10.파이썬 정규표현식/2023-10-10-01.파이썬 정규표현식.md
+++ b/_posts/01.Python/10.파이썬 정규표현식/2023-10-10-01.파이썬 정규표현식.md
@@ -2,6 +2,9 @@
 layout: single
 title: '정규 표현식'
 typora-root-url: ../
+categories: Python.10.파이썬 정규표현식
+tag: Python
+toc: true
 ---
 
 # <font size=50>정규 표현식 (Regular Expression)</font>
