--- a/_posts/01.Python/10.파이썬 정규표현식/2023-10-10-03.Finditer.md
+++ b/_posts/01.Python/10.파이썬 정규표현식/2023-10-10-03.Finditer.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Finditer(대상문자열)'
 typora-root-url: ../
+categories: Python.10.파이썬 정규표현식
+tag: Python
+toc: true
 ---
 
 # Finditer(대상문자열)
