--- a/_posts/01.Python/10.파이썬 정규표현식/2023-10-10-04.Greedy와  Non-Greedy.md
+++ b/_posts/01.Python/10.파이썬 정규표현식/2023-10-10-04.Greedy와  Non-Greedy.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Greedy 와 Non-Greedy'
 typora-root-url: ../
+categories: Python.10.파이썬 정규표현식
+tag: Python
+toc: true
 ---
 
 # Greedy 와 Non-Greedy
