--- a/_posts/03.Pandas/01.Pandas_Series/2023-10-11-00.Pandas_Sereis.md
+++ b/_posts/03.Pandas/01.Pandas_Series/2023-10-11-00.Pandas_Sereis.md
@@ -2,6 +2,9 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
+categories: Pandas.01.Series
+tag: Pandas
+toc: true
 ---
 
 <b style='font-size:2em'>판다스 (Pandas)</b>
