--- a/_posts/03.Pandas/01.Pandas_Series/2023-10-11-01.Series.md
+++ b/_posts/03.Pandas/01.Pandas_Series/2023-10-11-01.Series.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Pandas Series'
 typora-root-url: ../
+categories: Pandas.01.Series
+tag: Pandas
+toc: true
 ---
 
 # Pandas(판다스)
