--- a/_posts/03.Pandas/01.Pandas_Series/2023-10-11-02.Series원소 Indexing과 Slicing.md
+++ b/_posts/03.Pandas/01.Pandas_Series/2023-10-11-02.Series원소 Indexing과 Slicing.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Series원소 Indexing과 Slicing'
 typora-root-url: ../
+categories: Pandas.01.Series
+tag: Pandas
+toc: true
 ---
 
 
