--- a/_posts/03.Pandas/01.Pandas_Series/2023-10-11-04.Series 메소드와 속성.md
+++ b/_posts/03.Pandas/01.Pandas_Series/2023-10-11-04.Series 메소드와 속성.md
@@ -2,6 +2,9 @@
 layout: single
 title: '주요 메소드, 속성'
 typora-root-url: ../
+categories: Pandas.01.Series
+tag: Pandas
+toc: true
 ---
 
 # 주요 메소드, 속성
