--- a/_posts/03.Pandas/01.Pandas_Series/2023-10-11-06.결측치.md
+++ b/_posts/03.Pandas/01.Pandas_Series/2023-10-11-06.결측치.md
@@ -2,6 +2,9 @@
 layout: single
 title: '결측치'
 typora-root-url: ../
+categories: Pandas.01.Series
+tag: Pandas
+toc: true
 ---
 
 # 결측치 (Missing Value, Not Available)
