--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-01.DataFrame.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-01.DataFrame.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'DataFrame'
 typora-root-url: ../
+categories: Pandas.02.DataFrame
+tag: Pandas
+toc: true
 ---
 
 # DataFrame 생성
