--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-02.DataFrame 파일저장.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-02.DataFrame 파일저장.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'DataFrame 파일저장'
 typora-root-url: ../
+categories: Pandas.02.DataFrame
+tag: Pandas
+toc: true
 ---
 
 # DataFrame의 객체를 파일에 저장
