--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-05.데이터프레임 기본정보 조회.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-05.데이터프레임 기본정보 조회.md
@@ -2,6 +2,9 @@
 layout: single
 title: '데이터프레임 기본정보 조회'
 typora-root-url: ../
+categories: Pandas.02.DataFrame
+tag: Pandas
+toc: true
 ---
 
 # 데이터프레임 기본 정보 조회
