--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-06.컬럼이름과 행이름 조회 및 변경.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-06.컬럼이름과 행이름 조회 및 변경.md
@@ -2,6 +2,9 @@
 layout: single
 title: '컬럼이름/행이름 조회 및 변경'
 typora-root-url: ../
+categories: Pandas.02.DataFrame
+tag: Pandas
+toc: true
 ---
 
 # 컬럼이름/행이름 조회 및 변경
