--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-09.행과 열의 값 조회.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-09.행과 열의 값 조회.md
@@ -2,6 +2,9 @@
 layout: single
 title: '행과 열의 값 조회'
 typora-root-url: ../
+categories: Pandas.02.DataFrame
+tag: Pandas
+toc: true
 ---
 
 # 행, 열의 값 조회
@@ -297,5 +300,4 @@ grade[grade.columns[:4]]
   </tbody>
 </table>
 </div>
-
 
