--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-17.Query를 이용한 Boolean Indexing.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-17.Query를 이용한 Boolean Indexing.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Query를 이용한 Boolean Indexing'
 typora-root-url: ../
+categories: Pandas.02.DataFrame
+tag: Pandas
+toc: true
 ---
 
 # Query() 를 이용한 boolean indexing
