--- a/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-02.특정컬럼 값 기준정렬.md
+++ b/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-02.특정컬럼 값 기준정렬.md
@@ -2,7 +2,9 @@
 layout: single
 title: '특정컬럼 값 기준정렬'
 typora-root-url: ../
-categories: Python
+categories: Pandas.03.정렬과 집계
+tag: Pandas
+toc: true
 ---
 
 # 특정 컬럼(열)의 값을 기준으로 정렬
