--- a/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-03.기술통계 메소드.md
+++ b/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-03.기술통계 메소드.md
@@ -2,7 +2,9 @@
 layout: single
 title: '기술통계 메소드'
 typora-root-url: ../
-categories: Python
+categories: Pandas.03.정렬과 집계
+tag: Pandas
+toc: true
 ---
 
 # 기술통계 메소드들을 이용한 데이터 집계
@@ -359,5 +361,4 @@ flight.mean(numeric_only=True, skipna=False)
     DIVERTED          137.0
     CANCELLED         881.0
     dtype: float64
-
 
