--- a/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-04.Aggregate.md
+++ b/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-04.Aggregate.md
@@ -2,7 +2,9 @@
 layout: single
 title: 'Aggregate'
 typora-root-url: ../
-categories: Python
+categories: Pandas.03.정렬과 집계
+tag: Pandas
+toc: true
 ---
 
 # Aggregate(func, axis=0, \*args, \*\*kwargs) 또는 agg(func, axis=0, \*args, \*\*kwargs)
