--- a/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-06.사용자 정의 집계함수.md
+++ b/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-06.사용자 정의 집계함수.md
@@ -2,7 +2,9 @@
 layout: single
 title: '사용자 정의 집계함수'
 typora-root-url: ../
-categories: Python
+categories: Pandas.03.정렬과 집계
+tag: Pandas
+toc: true
 ---
 
 # 사용자 정의 집계함수
