--- a/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-07.실습예제.md
+++ b/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-07.실습예제.md
@@ -2,7 +2,9 @@
 layout: single
 title: '실습예제'
 typora-root-url: ../
-categories: Python
+categories: Pandas.03.정렬과 집계
+tag: Pandas
+toc: true
 ---
 
 # 실습예제
