--- a/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-07.Cut과Qcut.md
+++ b/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-07.Cut과Qcut.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Cut과 Qcut'
 typora-root-url: ../
+categories: Pandas.04.GroupBy 관련메소드 및 메소드
+tag: Pandas
+toc: true
 ---
 
 # cut()/qcut() - 연속형(실수)을 범주형으로 변환
@@ -692,5 +695,4 @@ result.value_counts()
     B    7
     C    7
     Name: count, dtype: int64
-
 
