--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-07.행과 열의 값 변경.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-07.행과 열의 값 변경.md
@@ -2,6 +2,9 @@
 layout: single
 title: '행/열의 값 변경'
 typora-root-url: ../
+categories: Pandas.02.DataFrame
+tag: Pandas
+toc: true
 ---
 
 # 행과 열의 값 변경
