--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-11.다양한 열선택 기능 메소드들.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-11.다양한 열선택 기능 메소드들.md
@@ -2,6 +2,9 @@
 layout: single
 title: '다양한 열선택 기능 메소드들'
 typora-root-url: ../
+categories: Pandas.02.DataFrame
+tag: Pandas
+toc: true
 ---
 
 # 다양한 열선택 기능을 제공하는 메소드들
