--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-15.Boolean Indexing 조회.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-15.Boolean Indexing 조회.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Boolean Indexing 조회'
 typora-root-url: ../
+categories: Pandas.02.DataFrame
+tag: Pandas
+toc: true
 ---
 
 # Boolean indexing을 이용한 조회
