--- a/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-05.GroupBy.md
+++ b/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-05.GroupBy.md
@@ -2,7 +2,9 @@
 layout: single
 title: 'GroupBy'
 typora-root-url: ../
-categories: Python
+categories: Pandas.03.정렬과 집계
+tag: Pandas
+toc: true
 ---
 
 # Groupby
