--- a/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-00.Pandas_GroupBy.md
+++ b/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-00.Pandas_GroupBy.md
@@ -2,6 +2,9 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
+categories: Pandas.04.GroupBy 관련메소드 및 메소드
+tag: Pandas
+toc: true
 ---
 
 # Filter()
