--- a/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-05.Pivot_Table.md
+++ b/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-05.Pivot_Table.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Pivot_Table'
 typora-root-url: ../
+categories: Pandas.04.GroupBy 관련메소드 및 메소드
+tag: Pandas
+toc: true
 ---
 
 # Pivot_table()
