--- a/_posts/03.Pandas/05.Pandas_DataFrame 합치기/2023-10-11-00.Pandas_DataFrame 합치기.md
+++ b/_posts/03.Pandas/05.Pandas_DataFrame 합치기/2023-10-11-00.Pandas_DataFrame 합치기.md
@@ -2,6 +2,9 @@
 layout: single
 title: '데이터프레임 합치기'
 typora-root-url: ../
+categories: Pandas.05.DataFrame 합치기
+tag: Pandas
+toc: true
 ---
 
 # 데이터프레임 합치기
