--- a/_posts/03.Pandas/05.Pandas_DataFrame 합치기/2023-10-11-01.Concat.md
+++ b/_posts/03.Pandas/05.Pandas_DataFrame 합치기/2023-10-11-01.Concat.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Concat'
 typora-root-url: ../
+categories: Pandas.05.DataFrame 합치기
+tag: Pandas
+toc: true
 ---
 
 # concat() 이용
