--- a/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-02.Unstack.md
+++ b/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-02.Unstack.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Unstack'
 typora-root-url: ../
+categories: Pandas.06.DataFrame 재구조화
+tag: Pandas
+toc: true
 ---
 
 # Unstack()
