--- a/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-03.Melt.md
+++ b/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-03.Melt.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Melt'
 typora-root-url: ../
+categories: Pandas.06.DataFrame 재구조화
+tag: Pandas
+toc: true
 ---
 
 # Melt() - 컬럼명을 컬럼의 값으로 변환한다.
