--- a/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-04.Pivot.md
+++ b/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-04.Pivot.md
@@ -2,6 +2,9 @@
 layout: single
 title: 'Pivot'
 typora-root-url: ../
+categories: Pandas.06.DataFrame 재구조화
+tag: Pandas
+toc: true
 ---
 
 # Pivot - index, column, value가 될 컬럼들을 지정해 재구조화
