--- a/_posts/04.Pyhon 시각화/03.각종 그래프 그리기1/2023-10-12-00.각종그래프 그리기1.md
+++ b/_posts/04.Pyhon 시각화/03.각종 그래프 그리기1/2023-10-12-00.각종그래프 그리기1.md
@@ -2,6 +2,9 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
+categories: Python시각화.02.각종그래프.01
+tag: Python시각화
+toc: true
 ---
 
 # 1. 선 그래프 (Line plot) 그리기
@@ -43,9 +46,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_2_0.png)
-    
+​    
 
 
 
@@ -59,9 +62,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_3_0.png)
-    
+​    
 
 
 ## 1.3 선 그래프 활용
@@ -101,7 +104,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -303,7 +306,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -468,9 +471,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_10_0.png)
-    
+​    
 
 
 
@@ -505,9 +508,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_11_0.png)
-    
+​    
 
 
 ## 최대 농도와 관측일 수의 연도별 변화를 시각화
@@ -540,9 +543,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_13_0.png)
-    
+​    
 
 
 
@@ -584,9 +587,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_14_0.png)
-    
+​    
 
 
 
@@ -606,9 +609,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_15_0.png)
-    
+​    
 
 
 # 2. 산점도 (Scatter Plot) 그리기
@@ -622,7 +625,7 @@ plt.show()
     - c/color: 색지정
         - c와 x, y와 같은 원소수를 가지는 Iterable 타입 객체로 설정할 경우 각 마커마다 다른 색상을 설정할 수 있다
     - s: 점 크기 지정
-        
+      
 
 
 ```python
@@ -647,9 +650,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_19_0.png)
-    
+​    
 
 
 ## 2.2 설정
@@ -689,9 +692,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_22_0.png)
-    
+​    
 
 
 ## 2.3 산점도 활용
@@ -738,7 +741,7 @@ df.info()
      9   z        53940 non-null  float64
     dtypes: float64(6), int64(1), object(3)
     memory usage: 4.1+ MB
-    
+
 
 ###  캐럿(carat)과 가격(Price)간의 상관관계 시각화
 
@@ -759,7 +762,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -946,9 +949,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_29_0.png)
-    
+​    
 
 
 > - 상관계수 
@@ -1002,7 +1005,7 @@ pd.DataFrame(r, index=['price','carat'], columns=['price','carat'])
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1050,7 +1053,7 @@ df[['price', 'carat']].corr()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1097,7 +1100,7 @@ df[['carat','price','depth','x','y','z']].corr()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1183,9 +1186,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_36_0.png)
-    
+​    
 
 
 
@@ -1196,9 +1199,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_37_0.png)
-    
+​    
 
 
 # 3. 막대그래프 (Bar plot) 그리기
@@ -1266,9 +1269,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_41_0.png)
-    
+​    
 
 
 
@@ -1282,9 +1285,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_42_0.png)
-    
+​    
 
 
 
@@ -1297,9 +1300,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_43_0.png)
-    
+​    
 
 
 
@@ -1332,9 +1335,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_45_0.png)
-    
+​    
 
 
 
@@ -1343,9 +1346,9 @@ v.plot(kind='bar', rot=0, );
 ```
 
 
-    
+​    
 ![png](output_46_0.png)
-    
+​    
 
 
 ## 3.2 막대그래프 활용
@@ -1375,7 +1378,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1477,7 +1480,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1594,9 +1597,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_52_0.png)
-    
+​    
 
 
 
@@ -1613,5 +1616,4 @@ df[2009]
     가을    143.1
     겨울    142.3
     Name: 2009, dtype: float64
-
 
