--- a/_posts/01.Python/09.Iterable과 Decorator/2023-10-09-03.Decorator.md
+++ b/_posts/01.Python/09.Iterable과 Decorator/2023-10-09-03.Decorator.md
@@ -2,7 +2,7 @@
 layout: single
 title: 'Decorator (장식자)'
 typora-root-url: ../
-categories: Python.09.Iterable과 Decorator
+categories: Python.09.Iterable과Decorator
 tag: Python
 toc: true
 ---
