--- a/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-02.인덱싱과 슬라이싱.md
+++ b/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-02.인덱싱과 슬라이싱.md
@@ -15,6 +15,7 @@ toc: true
 - **slicing**: 집합내에서 여러개의 값들을 범위로 지정해 조회하는 방법
 
 ### Indexing과 Slicing을 이용해 문자열내의 일부 문자들(sub string) 조회
+
 - **문자열 내의 각 문자들은 식별자로 index를 가진다.**
 
 - ##### 모든 문자는 양수/음수 index 두개를 가진다.
@@ -22,7 +23,8 @@ toc: true
     - 양수 index : 0부터 1씩 증가하는 값을 붙여준다. (문자열 앞에서부터 조회)
     - 음수 index : -1 에서 1씩 감소하는 값을 붙여준다. (문자열 뒤에서부터 조회)
 
-#### Indexing
+### Indexing
+
 - 문자열\[index\]
     - index의 문자를 조회
     - 변경은 안된다.
