--- a/_posts/03.Pandas/01.Pandas_Series/2023-10-11-04.Series 메소드와 속성.md
+++ b/_posts/03.Pandas/01.Pandas_Series/2023-10-11-04.Series 메소드와 속성.md
@@ -12,6 +12,8 @@ toc: true
 
 ```python
 import numpy as np
+import pandas as pd
+
 s2 = pd.Series(np.random.randint(100, size=100)) # 0 ~  99 사이의 랜덤정수 100개로 구성된 배열(List)을 생성
 ```
 
