--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-02.DataFrame 파일저장.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-02.DataFrame 파일저장.md
@@ -25,15 +25,11 @@ toc: true
     - 표(table)을 text파일에 작성하는 형식
     - 한행에 한개의 데이터를 입력
     - 속성값들을 `,` 로 구분
-```
-10,20,30
-100,10,5
-1,40,70
-```
-
 
 ```python
 import os
+import pandas as pd
+
 # 저장파일 저장할 디렉토리 생성
 os.makedirs('saved_data', exist_ok=True)
 ```
