--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-15.Boolean Indexing 조회.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-15.Boolean Indexing 조회.md
@@ -38,6 +38,8 @@ df.loc[행, 열]
 
 
 ```python
+import pandas as pd
+
 # df['color'].value_counts()
 ## 조건이 True인 행이 조회 ==> sql select의 where절
 df[df['color'] == 'Color']  
