--- a/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-02.Transform.md
+++ b/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-02.Transform.md
@@ -17,10 +17,12 @@ toc: true
         - return
             - 계산한 통계량.
         - DataFrameGroupBy은 모든 컬럼의 값들을 group 별 Series로 전달한다.
-    - *args: 함수에 전달할 추가 인자값이 있으면 매개변수 순서에 맞게 값을 전달한다.
+    - *args: 함수에 전달할 추가 인자값이 있으면 매개변수 순서에 맞게 값을 전달한다
 
 
 ```python
+import pandas as pd
+
 # 판다스 제공 집계함수 : 문자열로 전달.
 df.groupby('fruits')['cnt1'].transform('mean') 
 ```
