--- a/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-07.Cut과Qcut.md
+++ b/_posts/03.Pandas/04.GroupBy 관련메소드및 일괄처리 메소드/2023-10-11-07.Cut과Qcut.md
@@ -27,6 +27,8 @@ toc: true
 
 ```python
 import numpy as np
+import pandas as pd
+
 np.random.seed(0)
 # 1 ~ 100사이 정수를 랜덤하게 생성
 age = np.random.randint(1,100, 30 ) 
