--- a/_posts/03.Pandas/05.Pandas_DataFrame 합치기/2023-10-11-04.실습예제.md
+++ b/_posts/03.Pandas/05.Pandas_DataFrame 합치기/2023-10-11-04.실습예제.md
@@ -9,6 +9,12 @@ toc: true
 
 # 실습예제
 
+```python
+import pandas as pd
+```
+
+
+
 
 ```python
 # 1 data/customer.csv, data/order.csv, data/qna.csv 를 DataFrame으로 읽으시오.
