--- a/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-05.Crosstab.md
+++ b/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-05.Crosstab.md
@@ -18,6 +18,13 @@ toc: true
 - **margins**: 총합계 행과 열을 추가할지 여부. True-추가, False-추가안함(기본값)
 - **normalize**: 빈도수를 비율로 나타낸다.
 
+```python
+import pandas as pd
+import numpy as np
+```
+
+
+
 
 ```python
 # 10: 학생, 자영업, 회사원
