--- a/_posts/04.Pyhon 시각화/04.각종 그래프 그리기2/2023-10-12-00.각종그래프 그리기2.md
+++ b/_posts/04.Pyhon 시각화/04.각종 그래프 그리기2/2023-10-12-00.각종그래프 그리기2.md
@@ -1,18 +1,23 @@
 ---
 layout: single
-title: '변수와 연산자'
+title: '파이차트'
 typora-root-url: ../
+categories: Python시각화.02.각종그래프.02
+tag: Python시각화
+toc: true
 ---
 
-# 4. 파이차트 그리기
-## 4.1 파이차트
+# 파이차트 그리기
+
+## 파이차트
+
 - 각 범주(Category)가 데이터에서 차지하는 비율을 나타내는데 사용
 - `pie(x, labels)` 이용
     - x: 값 (값들을 100을 기준으로 비율을 계산해 크기 설정)
     - labels : 값들의 label
     - autopct: 조각내에 표시될 비율의 문자열 형식. '%fmt문자' 
         - fmt문자: f(실수), d(정수), %% (%)
-            
+          
 
 
 ```python
@@ -44,12 +49,11 @@ plt.show()
 ```
 
 
-    
-![png](output_3_0.png)
+![output_3_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_3_0.png)
     
 
+## 파이차트 활용
 
-## 4.2 파이차트 활용
 - 한국 웹브라우저 점유율을 파이차트로 작성
     - https://www.koreahtml5.kr/front/stats/browser/browserUseStats.do
 
@@ -61,7 +65,7 @@ import matplotlib.pyplot as plt
 ```
 
     Requirement already satisfied: xlrd in c:\users\world\anaconda3\envs\da\lib\site-packages (2.0.1)
-    
+
 
 
 ```python
@@ -116,7 +120,7 @@ df.info()
      20  Whale             12 non-null     float64
     dtypes: float64(21)
     memory usage: 2.1+ KB
-    
+
 
 
 ```python
@@ -135,7 +139,7 @@ df.head()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -339,7 +343,7 @@ web_df.head()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -436,7 +440,7 @@ web_df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -605,8 +609,7 @@ plt.show()
 ```
 
 
-    
-![png](output_12_0.png)
+![output_12_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_12_0-1697168834758-68.png)
     
 
 
@@ -627,9 +630,9 @@ plt.show()
 ```
 
 
-    
-![png](output_13_0.png)
-    
+​    
+![output_13_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_13_0.png)
+​    
 
 
 
@@ -651,8 +654,9 @@ web_df.loc['2018.08']
 
 
 
-# 5 히스토그램(Histogram) 그리기
-## 5.1 히스토그램
+# 히스토그램(Histogram)
+
+## 히스토그램
 
 - 도수 분포표를 그래프로 나타낸 것.
     - 도수분포표: 연속형 자료를 특정 구간(bin)으로 나눠 그 빈도를 나타낸 표
@@ -690,7 +694,7 @@ dia.info()
      9   z        53940 non-null  float64
     dtypes: float64(6), int64(1), object(3)
     memory usage: 4.1+ MB
-    
+
 
 
 ```python
@@ -764,8 +768,7 @@ plt.show()
 ```
 
 
-    
-![png](output_22_0.png)
+![output_22_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_22_0.png)
     
 
 
@@ -783,12 +786,11 @@ plt.show()
 ```
 
 
-    
-![png](output_23_0.png)
+![output_23_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_23_0.png)
     
 
+## 히스토그램 활용
 
-## 5.2 히스토그램 활용
 - tips.csv
     - 식당에서 팁을 지불한 손님의 정보를 모아둔 데이터 셋    
 
@@ -829,7 +831,7 @@ tips.head()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -969,13 +971,13 @@ plt.show()
 ```
 
 
-    
-![png](output_31_0.png)
+![output_31_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_31_0.png)
     
 
+# 상자그래프(Boxplot) 그리기
 
-# 6. 상자그래프(Boxplot) 그리기
-## 6.1 상자그래프란
+## 상자그래프란
+
 - 연속형 값들의 사분위수, 극단값들을 이용해 값들의 분포를 시각화한다.
 - boxplot(x, whis=1.5)
     - x: 데이터셋
@@ -1034,8 +1036,7 @@ plt.show()
 ```
 
 
-    
-![png](output_36_0.png)
+![output_36_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_36_0.png)
     
 
 
@@ -1047,8 +1048,7 @@ plt.show()
 ```
 
 
-    
-![png](output_37_0.png)
+![output_37_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_37_0.png)
     
 
 
@@ -1060,12 +1060,12 @@ plt.show()
 ```
 
 
-    
-![png](output_38_0.png)
-    
-
+​    
+![output_38_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_38_0.png)
+​    
 
 ## 상자그래프 활용
+
 - tips_df 에서 tip의 분포를 상자그래프로 확인
 
 
@@ -1080,8 +1080,7 @@ plt.show()
 ```
 
 
-    
-![png](output_40_0.png)
+![output_40_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_40_0.png)
     
 
 
@@ -1150,7 +1149,6 @@ plt.show()
 ```
 
 
-    
-![png](output_44_0.png)
+![output_44_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_44_0.png)
     
 
