--- a/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-01.변수와 연산자.md
+++ b/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-01.변수와 연산자.md
@@ -9,8 +9,7 @@ toc: true
 
 # 변수와 연산자
 
-
-### 변수를 생성하고 처음 값을 대입 
+## 변수를 생성하고 처음 값을 대입 
 
 
 ```python
@@ -70,9 +69,10 @@ print(name, name1, name2, 30, 40, '안녕', sep=',')
 
     유재석,박명수,홍길동,30,40,안녕
 
-
 ## 변수이름 관례
+
 ### 스네이크 표기법 - 파이썬
+
 - 단어 사이에 underscore(_)를 활용하는 표기법
 - 예) member_name, member_age, member_address
 
@@ -149,7 +149,6 @@ print(a, b)
 
     500 1000
 
-
 ## 튜풀 대입 (tuple assigment)
 
 
@@ -180,7 +179,7 @@ print(name, age, address)
 |//=|x //= 1|x = x // 1|
 |\*\*=|x \*\*= 1|x = x \*\* 1|
 
-## 연사자 사용
+### 연사자 사용
 
 
 ```python
@@ -253,8 +252,8 @@ print(a, b)
 
     500 1000
 
+## 변수값 조회
 
-### 변수값 조회
 - 값을 사용해야 하는 자리에 변수명을 표현하면된다.
     - 변수명을 쓰면 그 변수가 가진 값을 조회해 사용한다.
 
@@ -296,7 +295,7 @@ age
 
 메모리에서 변수을 제거할 때는 `del 변수명` 명령어를 사용한다.
 
-## 메모리에서 변수 num 제거 
+### 메모리에서 변수 num 제거 
 
 nameError ->없는 변수, 함수를 사용할 때
 
