--- a/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-03.포맷문자.md
+++ b/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-03.포맷문자.md
@@ -7,7 +7,7 @@ tag: Python
 toc: true
 ---
 
-# Format string (형식문자열) 생성
+# Format string
 
 - 문자열에 문장 형식/구성/Layout을  미리 만들어 놓고 값은 나중에 대입하는 방식으로 문자열을 만드는 것
  - format() 함수 이용
@@ -61,7 +61,7 @@ print(template2.format(name, age, tall, weight))
 
     이름홍길동, 이름홍길동, 이름홍길동, 나이25, 나이25, 키175, 몸무게82
 
-#### % value 사용
+## % value 사용
 
 - 타입을 지정하는 % value를 이용해 값을 넣어줄 자리를 지정한다.
 - format 문자열과 넣어줄 값은 % 로 구분한다.
@@ -93,7 +93,7 @@ print(info10)
 
     이름: 홍길동, 나이: 25세, 키: 175.00cm, 몸무게: 82.00kg
 
-#### f-string (format string)
+## f-string (format string)
 
 - 문자열 앞에 접두어 `f`를 사용한다.
 - 값을 넣을 자리에 {변수명} 을 이용해 변수가 가진 값을 문자열에 추가한다.
@@ -169,7 +169,6 @@ print(s.split()) # 공백을 기준으로 나눈다.
 ```
 
     ['사과', '배', '귤', '수박', '복숭아']
-
 
 ## string 주요 메소드
 
