--- a/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-09.행과 열의 값 조회.md
+++ b/_posts/03.Pandas/02.Pandas_DataFrame/2023-10-12-09.행과 열의 값 조회.md
@@ -28,6 +28,173 @@ toc: true
             - `df[df.columns[:3]]`
 
 
+
+
+```python
+import pandas as pd
+
+grade = pd.read_csv('saved_data/grade2.csv', index_col='id')
+grade
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+    
+    .dataframe thead th {
+        text-align: right;
+    }
+
+</style>
+
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>국어</th>
+      <th>영어</th>
+    </tr>
+    <tr>
+      <th>id</th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>id-1</th>
+      <td>100</td>
+      <td>80</td>
+    </tr>
+    <tr>
+      <th>id-2</th>
+      <td>80</td>
+      <td>90</td>
+    </tr>
+    <tr>
+      <th>id-3</th>
+      <td>90</td>
+      <td>75</td>
+    </tr>
+    <tr>
+      <th>id-4</th>
+      <td>70</td>
+      <td>80</td>
+    </tr>
+    <tr>
+      <th>id-5</th>
+      <td>80</td>
+      <td>60</td>
+    </tr>
+  </tbody>
+</table>
+
+</div>
+
+
+
+
+```python
+total = grade.sum(axis=1)
+mean = grade.mean(axis=1)
+grade['총점'] = total
+grade['평균'] = mean
+```
+
+
+```python
+grade
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+    
+    .dataframe thead th {
+        text-align: right;
+    }
+
+</style>
+
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>국어</th>
+      <th>영어</th>
+      <th>총점</th>
+      <th>평균</th>
+    </tr>
+    <tr>
+      <th>id</th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>id-1</th>
+      <td>100</td>
+      <td>80</td>
+      <td>180</td>
+      <td>90.0</td>
+    </tr>
+    <tr>
+      <th>id-2</th>
+      <td>80</td>
+      <td>90</td>
+      <td>170</td>
+      <td>85.0</td>
+    </tr>
+    <tr>
+      <th>id-3</th>
+      <td>90</td>
+      <td>75</td>
+      <td>165</td>
+      <td>82.5</td>
+    </tr>
+    <tr>
+      <th>id-4</th>
+      <td>70</td>
+      <td>80</td>
+      <td>150</td>
+      <td>75.0</td>
+    </tr>
+    <tr>
+      <th>id-5</th>
+      <td>80</td>
+      <td>60</td>
+      <td>140</td>
+      <td>70.0</td>
+    </tr>
+  </tbody>
+</table>
+
+</div>
+
+
 ```python
 # 한개 열  조회 => Series 로 반환.
 grade["국어"]  
