--- a/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-02.특정컬럼 값 기준정렬.md
+++ b/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-13-02.특정컬럼 값 기준정렬.md
@@ -31,6 +31,8 @@ toc: true
 
 
 ```python
+import pandas as pd
+
 # 행정렬. 정렬기준은 컬럼의 값
 ## director_name을 기준으로 오름차순 행정렬.
 df.sort_values(by="director_name")
