--- a/_posts/04.Pyhon 시각화/04.각종 그래프 그리기2/2023-10-12-01.파이차트(Pie).md
+++ b/_posts/04.Pyhon 시각화/04.각종 그래프 그리기2/2023-10-12-01.파이차트(Pie).md
@@ -7,7 +7,7 @@ tag: Python시각화
 toc: true
 ---
 
-# 파이차트 그리기
+# 파이차트
 
 ## 파이차트
 
@@ -651,504 +651,3 @@ web_df.loc['2018.08']
     Firefox           1.26
     etc               1.68
     Name: 2018.08, dtype: float64
-
-
-
-# 히스토그램(Histogram)
-
-## 히스토그램
-
-- 도수 분포표를 그래프로 나타낸 것.
-    - 도수분포표: 연속형 자료를 특정 구간(bin)으로 나눠 그 빈도를 나타낸 표
-        - 빈도 확인이나 **분포**를 볼때 사용한다.
-    - X축: 계급(변수구간)의 대표값, Y축: 빈도수
-- `hist(data [, bins=계급개수)` 메소드를 사용
-    - data: 리스트형의 객체를 전달한다.
-
-
-```python
-import pandas as pd
-import matplotlib.pyplot as plt
-```
-
-
-```python
-dia = pd.read_csv('data/diamonds.csv')
-dia.info()
-```
-
-    <class 'pandas.core.frame.DataFrame'>
-    RangeIndex: 53940 entries, 0 to 53939
-    Data columns (total 10 columns):
-     #   Column   Non-Null Count  Dtype  
-    ---  ------   --------------  -----  
-     0   carat    53940 non-null  float64
-     1   cut      53940 non-null  object 
-     2   color    53940 non-null  object 
-     3   clarity  53940 non-null  object 
-     4   depth    53940 non-null  float64
-     5   table    53940 non-null  float64
-     6   price    53940 non-null  int64  
-     7   x        53940 non-null  float64
-     8   y        53940 non-null  float64
-     9   z        53940 non-null  float64
-    dtypes: float64(6), int64(1), object(3)
-    memory usage: 4.1+ MB
-
-
-
-```python
-# dia.price.value_counts().plot(kind='bar')
-```
-
-
-```python
-dia['price'].agg(['min','max'])
-```
-
-
-
-
-    min      326
-    max    18823
-    Name: price, dtype: int64
-
-
-
-
-```python
-# 3등분 
-price_cate = pd.cut(dia['price'], bins=[300, 5000, 10000, 20000], labels=['저가','중가','고가'])
-price_cate
-```
-
-
-
-
-    0        저가
-    1        저가
-    2        저가
-    3        저가
-    4        저가
-             ..
-    53935    저가
-    53936    저가
-    53937    저가
-    53938    저가
-    53939    저가
-    Name: price, Length: 53940, dtype: category
-    Categories (3, object): ['저가' < '중가' < '고가']
-
-
-
-
-```python
-# 도수분포표( 연속형-> 범주형-> count)
-cnt = price_cate.value_counts()
-cnt
-```
-
-
-
-
-    price
-    저가    39226
-    중가     9492
-    고가     5222
-    Name: count, dtype: int64
-
-
-
-
-```python
-# 도수분포표 시각화 -> 히스토그램
-plt.bar(cnt.index, cnt)
-plt.ylabel('Price($)')
-plt.show()
-```
-
-
-![output_22_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_22_0.png)
-    
-
-
-
-```python
-# 히스토그램 
-## 히스토그램을 그릴 데이터셋: 연속형값 => Default: 10등분 -> 개수 count
-## bins: 범위 지정
-plt.hist(dia['price'], bins=3, color='tomato')
-
-# bins: List로 담아서 등분
-plt.hist(dia['price'], bins=[300, 5000, 10000, 20000], alpha=0.5, color='k')
-plt.show()
-
-```
-
-
-![output_23_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_23_0.png)
-    
-
-## 히스토그램 활용
-
-- tips.csv
-    - 식당에서 팁을 지불한 손님의 정보를 모아둔 데이터 셋    
-
-
-```python
-import pandas as pd
-import matplotlib.pyplot as plt
-```
-
-
-```python
-tips = pd.read_csv('data/tips.csv')
-tips.shape
-```
-
-
-
-
-    (244, 7)
-
-
-
-
-```python
-tips.head()
-# total price: 총금액, size: 인원수
-```
-
-
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-    
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>total_bill</th>
-      <th>tip</th>
-      <th>sex</th>
-      <th>smoker</th>
-      <th>day</th>
-      <th>time</th>
-      <th>size</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>16.99</td>
-      <td>1.01</td>
-      <td>Female</td>
-      <td>No</td>
-      <td>Sun</td>
-      <td>Dinner</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>10.34</td>
-      <td>1.66</td>
-      <td>Male</td>
-      <td>No</td>
-      <td>Sun</td>
-      <td>Dinner</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>21.01</td>
-      <td>3.50</td>
-      <td>Male</td>
-      <td>No</td>
-      <td>Sun</td>
-      <td>Dinner</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>23.68</td>
-      <td>3.31</td>
-      <td>Male</td>
-      <td>No</td>
-      <td>Sun</td>
-      <td>Dinner</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>24.59</td>
-      <td>3.61</td>
-      <td>Female</td>
-      <td>No</td>
-      <td>Sun</td>
-      <td>Dinner</td>
-      <td>4</td>
-    </tr>
-  </tbody>
-</table>
-</div>
-
-
-
-
-```python
-# 범주형 Data
-tips['sex'].value_counts()
-tips['smoker'].value_counts()
-tips['day'].value_counts()
-tips['size'].value_counts()
-```
-
-
-
-
-    size
-    2    156
-    3     38
-    4     37
-    5      5
-    1      4
-    6      4
-    Name: count, dtype: int64
-
-
-
-
-```python
-# 연속형 Data
-tips['total_bill'].value_counts()
-tips['tip'].value_counts()
-```
-
-
-
-
-    tip
-    2.00    33
-    3.00    23
-    4.00    12
-    5.00    10
-    2.50    10
-            ..
-    4.34     1
-    1.56     1
-    5.20     1
-    2.60     1
-    1.75     1
-    Name: count, Length: 123, dtype: int64
-
-
-
-### total_bill 의 분포를 시각화
-
-
-```python
-plt.title('음식값과 팁의 분포')
-# bins= : 원하는 범위로 나눔
-plt.hist(tips['total_bill'], bins=[0.5, 10, 13, 14, 20, 30, 40, 52], alpha=0.3, label='Bill')
-
-# tip의 분포
-plt.hist(tips['tip'], alpha=0.3, label='Tip')
-
-plt.legend()
-plt.show()
-```
-
-
-![output_31_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_31_0.png)
-    
-
-# 상자그래프(Boxplot) 그리기
-
-## 상자그래프란
-
-- 연속형 값들의 사분위수, 극단값들을 이용해 값들의 분포를 시각화한다.
-- boxplot(x, whis=1.5)
-    - x: 데이터셋
-    - whis: 극단치 계산시 사용할 값(기본 1.5)
-        - IQR을 이용해 극단치 계산하기
-            - IQR(Inter Quatile Range): $3분위수 - 1분위수$ 로 중간 50%값의 범위
-            - 극단적으로 작은값: 1분위 - $IQR(3분위수-1분위수) * whis$   보다 작은 값들
-            - 극단적으로 큰값: 3분위 + $IQR(3분위수-1분위수) * whis$  보다 큰 값들
-
-
-```python
-import numpy as np
-import pandas as pd
-import matplotlib.pyplot as plt
-```
-
-
-```python
-# 랜덤값생성: 1 ~ 100 사이 정수 1000개
-data = np.random.randint(1, 100, 1000)
-data[:5] = [200, 250, -50, -100, -60]
-data[:10]
-```
-
-
-
-
-    array([ 200,  250,  -50, -100,  -60,   38,   58,   66,   25,   15])
-
-
-
-
-```python
-# 사분위수
-## 중위수(중앙값): 0.5
-pd.Series(data).quantile(q=[0.25,0.5,0.75])
-```
-
-
-
-
-    0.25    25.0
-    0.50    50.0
-    0.75    73.0
-    dtype: float64
-
-
-
-
-```python
-# boxplot: 4분위 => 1분위: 밑박스, 2분위(중앙값): 박스중앙(오렌지). 3분위: 위박스 -> 개수 알수없음
-## 정상범위: 수염(정상범위) => 밑수염: 정상범위 최소값, 위수염: 장상범위 최대값
-### 극단치: 동그라미 5개, 정상범위 계산: 최소값: 1분위 - IQR(3분위 - 1분위), 최대값: 3분위 + IQR
-plt.boxplot(data)
-plt.show()
-```
-
-
-![output_36_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_36_0.png)
-    
-
-
-
-```python
-# whis: 정상범위를 좁게  -> Default: 1.5
-plt.boxplot(data, whis=0.5)
-plt.show()
-```
-
-
-![output_37_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_37_0.png)
-    
-
-
-
-```python
-# whis: 정상범위를 넓게  -> Default: 1.5
-plt.boxplot(data, whis=3)
-plt.show()
-```
-
-
-​    
-![output_38_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_38_0.png)
-​    
-
-## 상자그래프 활용
-
-- tips_df 에서 tip의 분포를 상자그래프로 확인
-
-
-```python
-# tip의 분포 -> boxplot(값의 범위를 기준 시각화)
-plt.figure(figsize=(3, 6))
-
-plt.boxplot(tips['tip'])
-plt.ylabel("Tip($)")
-
-plt.show()
-```
-
-
-![output_40_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_40_0.png)
-    
-
-
-- 남녀별 tip의 분포를 하나의 boxplot에서 그려 비교
-- 한 그래프에서 여러 데이터셋의 boxplot을 그리기.
-    - 2차원 배열형태의 구조로로 데이터를 제공
-    - 행(axis=0) 별로 그래프를 그린다.
-
-
-```python
-#  남녀별 tip을 분리
-m_tip = tips.loc[tips['sex'] == 'Male', 'tip']
-m_tip
-```
-
-
-
-
-    1      1.66
-    2      3.50
-    3      3.31
-    5      4.71
-    6      2.00
-           ... 
-    236    1.00
-    237    1.17
-    239    5.92
-    241    2.00
-    242    1.75
-    Name: tip, Length: 157, dtype: float64
-
-
-
-
-```python
-f_tip = tips.query(' sex ==  "Female"')['tip']
-f_tip
-```
-
-
-
-
-    0      1.01
-    4      3.61
-    11     5.00
-    14     3.02
-    16     1.67
-           ... 
-    226    2.00
-    229    2.88
-    238    4.67
-    240    2.00
-    243    3.00
-    Name: tip, Length: 87, dtype: float64
-
-
-
-
-```python
-# 하나의 boxplot에 두개 이상의 데이터를 그릴경우 리스트로 묶어서 제공
-## Series을 넣어야한다.
-plt.boxplot([m_tip, f_tip], labels=['남성','여성'])
-plt.ylabel('tip($)')
-
-plt.show()
-```
-
-
-![output_44_0](/../../images/2023-10-12-00.각종그래프 그리기2/output_44_0.png)
-    
-
