--- a/_posts/04.Pyhon 시각화/05.Pandas 시각화/2023-10-12-00.Pandas 시각화.md
+++ b/_posts/04.Pyhon 시각화/05.Pandas 시각화/2023-10-12-00.Pandas 시각화.md
@@ -2,13 +2,12 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
+categories: Python시각화.05.Pandas시각화
+tag: Python시각화
+toc: true
 ---
 
 # Pandas 시각화
-판다시 자체적으로 matplotlib 를 기반으로 한 시각화기능을 지원한다.    
-Series나 DataFrame에 plot() 함수나 plot accessor를 사용한다.
-- https://pandas.pydata.org/pandas-docs/stable/user_guide/visualization.html
-
 
 ```python
 import pandas as pd
@@ -55,9 +54,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_4_0.png)
-    
+​    
 
 
 
@@ -74,9 +73,9 @@ s.plot.bar()
 
 
 
-    
+​    
 ![png](output_5_1.png)
-    
+​    
 
 
 matplotlib를 이용해 여러 설정들 가능
@@ -124,9 +123,9 @@ plt.ylim(0, 170);
 ```
 
 
-    
+​    
 ![png](output_10_0.png)
-    
+​    
 
 
 
@@ -137,9 +136,9 @@ tips['sex'].value_counts().plot(kind='bar', title='성별 테이블수', ylabel=
 ```
 
 
-    
+​    
 ![png](output_11_0.png)
-    
+​    
 
 
 
@@ -150,9 +149,9 @@ tips['smoker'].value_counts().plot(kind='barh', rot=45, title='흡연');
 ```
 
 
-    
+​    
 ![png](output_12_0.png)
-    
+​    
 
 
 - 두개의 분류 별로 그리기
@@ -178,7 +177,7 @@ count_df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -228,9 +227,9 @@ count_df.plot(kind='bar')
 
 
 
-    
+​    
 ![png](output_15_1.png)
-    
+​    
 
 
 
@@ -241,9 +240,9 @@ plt.legend(bbox_to_anchor=(1,1), loc='upper left', title='흡연여부', fontsiz
 ```
 
 
-    
+​    
 ![png](output_16_0.png)
-    
+​    
 
 
 
@@ -253,9 +252,9 @@ plt.legend(bbox_to_anchor=(1, 1), loc='upper left', fontsize=14, title='요일')
 ```
 
 
-    
+​    
 ![png](output_17_0.png)
-    
+​    
 
 
 
@@ -265,9 +264,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_18_0.png)
-    
+​    
 
 
 
@@ -278,9 +277,9 @@ plt.legend(bbox_to_anchor=(1, 1), loc='upper left', fontsize=14, title='요일')
 ```
 
 
-    
+​    
 ![png](output_19_0.png)
-    
+​    
 
 
 ## 파이차트
@@ -336,9 +335,9 @@ plt.legend(bbox_to_anchor=(1,1), fontsize=14, loc='upper left')
 
 
 
-    
+​    
 ![png](output_23_1.png)
-    
+​    
 
 
 ## 히스토그램, KDE(밀도그래프)
@@ -350,9 +349,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_25_0.png)
-    
+​    
 
 
 
@@ -363,9 +362,9 @@ plt.legend(fontsize=14, bbox_to_anchor=[1,1], loc='upper left');
 ```
 
 
-    
+​    
 ![png](output_26_0.png)
-    
+​    
 
 
 
@@ -376,7 +375,7 @@ plt.legend(fontsize=14, bbox_to_anchor=[1,1], loc='upper left');
 
     Requirement already satisfied: scipy in c:\users\world\anaconda3\envs\da\lib\site-packages (1.11.2)
     Requirement already satisfied: numpy<1.28.0,>=1.21.6 in c:\users\world\anaconda3\envs\da\lib\site-packages (from scipy) (1.25.2)
-    
+
 
 
 ```python
@@ -384,9 +383,9 @@ tips['total_bill'].plot(kind='kde');
 ```
 
 
-    
+​    
 ![png](output_28_0.png)
-    
+​    
 
 
 
@@ -395,9 +394,9 @@ tips[['total_bill', 'tip']].plot.kde(alpha=0.5);
 ```
 
 
-    
+​    
 ![png](output_29_0.png)
-    
+​    
 
 
 ## Boxplot (상자그래프)
@@ -411,9 +410,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_31_0.png)
-    
+​    
 
 
 
@@ -423,9 +422,9 @@ tips[['total_bill', 'tip']].plot.box();
 ```
 
 
-    
+​    
 ![png](output_32_0.png)
-    
+​    
 
 
 ## scatter plot (산점도) 
@@ -438,9 +437,9 @@ tips.plot.scatter(x='total_bill', y='tip');
 ```
 
 
-    
+​    
 ![png](output_34_0.png)
-    
+​    
 
 
 
@@ -461,7 +460,7 @@ tips[['total_bill','tip']].corr()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -514,7 +513,7 @@ print(dt)
     2023-09-10
     21:23:20
     2023-09-10 21:23:20
-    
+
 
 
 ```python
@@ -527,7 +526,7 @@ print(ct)
 
     2023-09-22
     2023-09-22 15:11:34.569111
-    
+
 
 
 ```python
@@ -564,7 +563,7 @@ print(type(s))
 
     2023년 09월 22일 15시 11분 34초
     <class 'str'>
-    
+
 
 
 ```python
@@ -576,7 +575,7 @@ dt
 ```
 
     <class 'datetime.datetime'>
-    
+
 
 
 
@@ -620,7 +619,7 @@ print(now + timedelta(days=3, hours=10))
     2023-09-19 15:21:38.334407
     2023-10-13 15:21:38.334407
     2023-09-26 01:21:38.334407
-    
+
 
 ## Pandas - Timestamp
 - 일시 타입. (날짜와 시간을 나노초-1/10억초- 단위로 관리)
@@ -663,7 +662,7 @@ s
 ```
 
     <class 'pandas.core.series.Series'>
-    
+
 
 
 
@@ -722,7 +721,7 @@ print(s2.dt.day)
     3    10
     4    24
     dtype: int32
-    
+
 
 
 ```python
@@ -862,7 +861,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -961,7 +960,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1070,7 +1069,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1184,7 +1183,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1283,9 +1282,9 @@ df.loc['2009-01-01'].plot(figsize=(10,4));
 ```
 
 
-    
+​    
 ![png](output_68_0.png)
-    
+​    
 
 
 
@@ -1294,9 +1293,9 @@ df['봄'].plot(figsize=(10,4));
 ```
 
 
-    
+​    
 ![png](output_69_0.png)
-    
+​    
 
 
 
@@ -1306,9 +1305,9 @@ df[['봄','겨울']].plot(figsize=(10,4));
 ```
 
 
-    
+​    
 ![png](output_70_0.png)
-    
+​    
 
 
 
@@ -1326,7 +1325,7 @@ plt.legend(bbox_to_anchor=(1,1), loc='upper left', fontsize='14')
 
 
 
-    
+​    
 ![png](output_71_1.png)
-    
+​    
 
